noinst_LTLIBRARIES = libblender_BMF.la

libblender_BMF_la_SOURCES = \
	BMF_Api.h \
	BMF_Fonts.h \
	BMF_Settings.h \
	intern/BMF_Api.cpp \
	intern/BMF_BitmapFont.cpp \
	intern/BMF_BitmapFont.h \
	intern/BMF_FontData.h \
	intern/BMF_font_helv10.cpp \
	intern/BMF_font_helv12.cpp \
	intern/BMF_font_helvb10.cpp \
	intern/BMF_font_helvb12.cpp \
	intern/BMF_font_helvb14.cpp \
	intern/BMF_font_helvb8.cpp \
	intern/BMF_font_scr12.cpp \
	intern/BMF_font_scr14.cpp \
	intern/BMF_font_scr15.cpp

EXTRA_DIST = \
	make/msvc_6_0/bmfont.dsp \
	make/msvc_6_0/bmfont.dsw
