noinst_LTLIBRARIES = libblender_BSP.la
INCLUDES = -I$(top_srcdir)/intern/container \
	-I$(top_srcdir)/intern/moto/include \
	-I$(top_srcdir)/intern/memutil

libblender_BSP_la_SOURCES = \
	extern/CSG_BooleanOps.h \
	intern/BSP_CSGHelper.cpp \
	intern/BSP_CSGMesh.cpp \
	intern/BSP_CSGMeshBuilder.cpp \
	intern/BSP_CSGMeshSplitter.cpp \
	intern/BSP_CSGNCMeshSplitter.cpp \
	intern/BSP_CSGUserData.cpp \
	intern/BSP_FragNode.cpp \
	intern/BSP_FragTree.cpp \
	intern/BSP_MeshFragment.cpp \
	intern/BSP_MeshPrimitives.cpp \
	intern/BSP_Triangulate.cpp \
	intern/CSG_BooleanOps.cpp
