noinst_LTLIBRARIES = libblender_BSP.la
INCLUDES = -I$(top_srcdir)/intern/container \
	-I$(top_srcdir)/intern/moto/include \
	-I$(top_srcdir)/intern/memutil

libblender_BSP_la_SOURCES = \
	extern/CSG_BooleanOps.h \
	intern/BSP_CSGException.h \
	intern/BSP_CSGHelper.cpp \
	intern/BSP_CSGHelper.h \
	intern/BSP_CSGISplitter.h \
	intern/BSP_CSGMesh.cpp \
	intern/BSP_CSGMesh.h \
	intern/BSP_CSGMeshBuilder.cpp \
	intern/BSP_CSGMeshBuilder.h \
	intern/BSP_CSGMeshSplitter.cpp \
	intern/BSP_CSGMeshSplitter.h \
	intern/BSP_CSGMesh_CFIterator.h \
	intern/BSP_CSGNCMeshSplitter.cpp \
	intern/BSP_CSGNCMeshSplitter.h \
	intern/BSP_CSGUserData.cpp \
	intern/BSP_CSGUserData.h \
	intern/BSP_FragNode.cpp \
	intern/BSP_FragNode.h \
	intern/BSP_FragTree.cpp \
	intern/BSP_FragTree.h \
	intern/BSP_MeshFragment.cpp \
	intern/BSP_MeshFragment.h \
	intern/BSP_MeshPrimitives.cpp \
	intern/BSP_MeshPrimitives.h \
	intern/BSP_Triangulate.cpp \
	intern/BSP_Triangulate.h \
	intern/CSG_BooleanOps.cpp
