SUBDIRS = blenloader deflate inflate encrypt decrypt sign verify \
	writestreamglue readstreamglue writeblenfile readblenfile \
	avi imbuf img misc render radiosity blenlib blenkernel blenpluginapi \
	bpython makesdna src renderconverter

noinst_LTLIBRARIES = libblender_blender.la
libblender_blender_la_SOURCES =

libblender_blender_la_LIBADD = \
	blenloader/libblender_blenloader.la \
	deflate/libblender_deflate.la \
	inflate/libblender_inflate.la \
	encrypt/libblender_encrypt.la \
	decrypt/libblender_decrypt.la \
	sign/libblender_sign.la \
	verify/libblender_verify.la \
	writestreamglue/libblender_writestreamglue.la \
	readstreamglue/libblender_readstreamglue.la \
	writeblenfile/libblender_writeblenfile.la \
	readblenfile/libblender_readblenfile.la \
	avi/libblender_avi.la \
	imbuf/libblender_imbuf.la \
	img/libblender_img.la \
	misc/libblender_misc.la \
	render/libblender_render.la \
	radiosity/libblender_radiosity.la \
	blenlib/libblender_blenlib.la \
	blenkernel/libblender_blenkernel.la \
	blenpluginapi/libblender_blenpluginapi.la \
	bpython/libblender_bpython.la \
	makesdna/libblender_makesdna.la \
	src/libblender_blendersrc.la \
	renderconverter/libblender_renderconverter.la
